# meadows-tui

./: .env.example  .gitignore  README.md  pyproject.toml  tasks.py
src/meadows/tui/: __init__.py  __main__.py  app.py  cli.py  client_bridge.py  config.py  themes.py
src/meadows/tui/screens/: auth_screen.py  chat_screen.py
src/meadows/tui/util/: __init__.py
src/meadows/tui/widgets/: input_widget.py  message_widget.py  sidebar_widget.py
tests/: test_tui.py
